--- a/index.html
+++ b/index.html
@@ -9,7 +9,49 @@
      rel="stylesheet">
      <title>Essência da beleza</title>
 </head>
+
 <body>
-    
-</body>
-</html>
+<header>Essência da beleza</header>
+
+<section class="chamada">
+    <div class="chamada-texto">
+        <h1>Temas</h1>
+        <p>Maquiagem para iniciantes</p>
+        <p>Maquiagem delicada</p>
+        <p>pele perfeita</p>
+        <p>Maquiagem profissional</p>
+    </div>
+
+    <div>
+        <inframe width="560" height="315" scr="https://youtu.be/P0pvphMAeUY?si=kURJUIMysLvNHbQt"
+        title="COMO FAZER UMA MAKE PROFISSIONAL EM CASA" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;picture-in-picture; web-"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></inframe>
+        </div>
+        </section>
+        <section class="categoria">
+            <h2> maquiagem para iniciantes</h2>
+            <div class="categoria-videos">
+                <a href="https://youtu.be/QDOL_XKjTzg?si=jPQJE8cockVSI2eJ">
+                <img scr="https://i.ytimg.com/vi/QDOL_XKjTzg/mqdefault.jpg" />
+                </a>
+                <a href="https://youtu.be/i8hmdM3MzSY?si=KUhZTwy2kcKfyohb">
+                    <img scr="https://i.ytimg.com/vi/pp68RJNStZM/maxresdefault.jpg" />
+                </a>
+                <h3> maquiagem delicada</h3>
+                <div class="categoria-videos">
+                    <a href="https://youtu.be/d-AEbiiAops?si=Zoo8F3AtQIXEzkgQ">
+                    <img scr="https://i.ytimg.com/vi/d-AEbiiAops/maxresdefault.jpg" />
+                </a>
+                <a href="https://youtu.be/lztEd7jKut4?si=VcDlfgjDmTYX-Cnf">
+                    <img scr="https://i.ytimg.com/vi/lztEd7jKut4/sddefault.jpg" />
+                </a>
+                <h4> pele perfeita</h4>
+                <div class="categoria-videos">
+                    <a href="https://youtu.be/BRbub42opug?si=Y3oJ8rOrvykiewcI">
+                        <img scr="https://i.ytimg.com/vi/BRbub42opug/hqdefault.jpg" />
+                    </a>
+                    <a href="https://youtu.be/Wfs4cTm6NdY?si=oCIYtFeFUnfS2kGy">
+                        <img scr="https://i.ytimg.com/vi/Wfs4cTm6NdY/maxresdefault.jpg"
+                    </a>
+        </section>
